syntax = "proto3";
package replication;
service Replicator {
    rpc update(UpdateRequest) returns (UpdateReply);
    rpc ack(UpdateAck) returns (UpdateReply);
}

service Querier {
    rpc get(QueryRequest) returns (QueryReply);
    //rpc update(Config) returns (QueryReply);
}
message UpdateRequest {
    string id = 1;
    string key = 2;
    string value = 3;
}

message UpdateAck {
    string id = 1;
}
message UpdateReply {
    string id = 1;
}

message QueryRequest {
    string id = 1;
    string key = 2;
}

message QueryReply {
    string id = 1;
    string key = 2;
    string value = 3;
}